Wed Aug 12 06:35:09 1992  Linus Tolke Y  (linus@robin)

	* startup.el (lyskom-fetch-until-we-have-unread): Bugfix, it is
	  now possible to login without unread and get the default prompt.

Tue Aug  4 08:07:14 1992  Linus Tolke Y  (linus@robin)

	* reading.el (lyskom-enter-map-in-to-do-list): 0 is removed, not
	  substituted with nil.

Mon Aug  3 05:55:46 1992  Linus Tolke Y  (linus@robin)

	* swedish-string.el (lyskom-mode-map): ]terse urinl{gget added on
	  ] u.

	* async.el (lyskom-conf-fetched-p): required function.

	* lyskom-rest.el (lyskom-go-to-next-conf): Prefetch of all
	  text-trees started on entrance.
	  (lyskom-end-of-command): Try to shut of prefetch while fetching
	  text to get next prompt.

	* prefetch.el (lyskom-prefetch-limit): limit = 1;
	  MEMBERSHIPISREAD: new special type.
	  (lyskom-prefetch-one-item): Bugfix. lyskom-prefetch-textauth
	  shall fetch text-stat first.
	  (lyskom-prefetch-textauth-handler,
	  lyskom-prefetch-texttree-handler): handle error. This is needed
	  in all the prefetch-function handlers.

	* startup.el (lyskom-fetch-until-we-have-an-unread): New function
	  to be called from lyskom-end-of-command.
	  (lyskom-decide-unread-conf): sets lyskom-membership-is-read to t.

Sat Aug  1 17:45:37 1992  Linus Tolke Y  (linus@robin)

	* prefetch.el (lyskom-prefetch-membership-handler,
	  lyskom-prefetch-one-item): lyskom-membership-is-read is set to
	  t when all the membership is read.

	* lyskom-rest.el (lyskom-end-of-command): 
	  startup.el (lyskom-start-anew-login-2): prefetched started after
	  first prompt is written.

	* lyskom-rest.el (lyskom-what-to-do): The decision of when we are
	  done now use an updated algoritm (lyskom-membership-is-read == t)

Thu Jul 30 03:54:50 1992  Linus Tolke Y  (linus@lysator)

	* prefetch.el (lyskom-prefetch-membership-handler): Wrong call to map.

	* lyskom-rest.el: Removed old prefetch-functions.	

	* lyskom-rest.el (lyskom-end-of-command): lyskom-after-command-hook.
