@@ -1,3 +1,15 @@
+Sun Aug 30 20:00:14 1992  Linus Tolke Y  (linus@rune)
+
+	* vars.el,async.el,macros.el,startup.el (lyskom-no-prompt):
+	  removed variable.
+
+Sun Aug 16 22:29:19 1992  Linus Tolke Y  (linus@robin)
+
+	* lyskom-rest.el (lyskom-start-of-command, lyskom-end-of-command):
+	  The prefetch is now turned on and of while executing a command.
+
+	* vars.el: The version number is not 0.35
+
 Wed Aug 12 06:35:09 1992  Linus Tolke Y  (linus@robin)
 
 	* startup.el (lyskom-fetch-until-we-have-unread): Bugfix, it is
